# calorg

./: README.md  misc.py  test2.ics  token.json
calendar_organizer/: Cargo.toml
calendar_organizer/src/: lib.rs  main.rs
