[package]
name = "calendar_organizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-calendar = "0.7.0"
ics = "0.5.8"
chrono = "0.4.31"
chrono-tz = "0.8.3"
rand = "0.8.5"
uuid = "1.4.1"
[dependencies.ical]
version = "0.8.0"
default-features = false
features = ["ical", "vcard", "generator"]